use borsh directly in solana-secp256k1-recover dev deps

--- a/curves/secp256k1-recover/Cargo.toml
+++ b/curves/secp256k1-recover/Cargo.toml
@@ -19,8 +19,8 @@ libsecp256k1 = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
+borsh = { workspace = true }
 solana-program = { workspace = true }
-solana-secp256k1-recover = { path = ".", features = ["borsh"] }
 
 [target.'cfg(not(target_os = "solana"))'.dev-dependencies]
 libsecp256k1 = { workspace = true, features = ["hmac"] }
