update short_vec dependents to use new crate

--- a/gossip/Cargo.toml
+++ b/gossip/Cargo.toml
@@ -44,6 +44,7 @@ solana-rayon-threadlimit = { workspace = true }
 solana-runtime = { workspace = true }
 solana-sanitize = { workspace = true }
 solana-sdk = { workspace = true }
+solana-short-vec = { workspace = true }
 solana-streamer = { workspace = true }
 solana-tpu-client = { workspace = true }
 solana-version = { workspace = true }
