--- a/programs/config/Cargo.toml
+++ b/programs/config/Cargo.toml
@@ -16,6 +16,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-sdk = { workspace = true }
+solana-short-vec = { workspace = true }
 
 [dev-dependencies]
 solana-logger = { workspace = true }
