--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -36,6 +36,7 @@ solana-cli-output = { workspace = true }
 solana-client = { workspace = true }
 solana-compute-budget = { workspace = true }
 solana-config-program = { workspace = true }
+solana-decode-error = { workspace = true }
 solana-faucet = { workspace = true }
 solana-loader-v4-program = { workspace = true }
 solana-logger = { workspace = true }
