--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ members = [
     "sdk/cargo-test-sbf",
     "sdk/gen-headers",
     "sdk/macro",
+    "sdk/native-token",
     "sdk/package-metadata-macro",
     "sdk/program",
     "send-transaction-service",
@@ -362,6 +363,7 @@ solana-logger = { path = "logger", version = "=2.1.0" }
 solana-measure = { path = "measure", version = "=2.1.0" }
 solana-merkle-tree = { path = "merkle-tree", version = "=2.1.0" }
 solana-metrics = { path = "metrics", version = "=2.1.0" }
+solana-native-token = { path = "sdk/native-token", version = "=2.1.0" }
 solana-net-utils = { path = "net-utils", version = "=2.1.0" }
 solana-nohash-hasher = "0.2.1"
 solana-notifier = { path = "notifier", version = "=2.1.0" }
