--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -33,6 +33,7 @@ sha2 = { workspace = true }
 sha3 = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
+solana-native-token = { workspace = true }
 solana-sdk-macro = { workspace = true }
 thiserror = { workspace = true }
 
