--- a/curves/secp256k1-recover/Cargo.toml
+++ b/curves/secp256k1-recover/Cargo.toml
@@ -11,6 +11,7 @@ edition = { workspace = true }
 
 [dependencies]
 borsh = { workspace = true, optional = true }
+solana-define-syscall = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 thiserror = { workspace = true }
 
