only require solana-define-syscall when target_os = "solana"

--- a/curves/secp256k1-recover/Cargo.toml
+++ b/curves/secp256k1-recover/Cargo.toml
@@ -11,9 +11,11 @@ edition = { workspace = true }
 
 [dependencies]
 borsh = { workspace = true, optional = true }
-solana-define-syscall = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 thiserror = { workspace = true }
+
+[target.'cfg(target_os = "solana")'.dependencies]
+solana-define-syscall = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
 libsecp256k1 = { workspace = true }
