add docs.rs metadata

--- a/curves/secp256k1-recover/Cargo.toml
+++ b/curves/secp256k1-recover/Cargo.toml
@@ -34,3 +34,6 @@ rustc_version = { workspace = true }
 [features]
 borsh = ["dep:borsh"]
 frozen-abi = ["dep:solana-frozen-abi"]
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
