--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -34,6 +34,7 @@ sha3 = { workspace = true }
 solana-atomic-u64 = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
+solana-msg = { workspace = true }
 solana-sanitize = { workspace = true }
 solana-sdk-macro = { workspace = true }
 thiserror = { workspace = true }
