--- a/sdk/msg/Cargo.toml
+++ b/sdk/msg/Cargo.toml
@@ -9,7 +9,7 @@ homepage = { workspace = true }
 license = { workspace = true }
 edition = { workspace = true }
 
-[dependencies]
+[target.'cfg(target_os = "solana")'.dependencies]
 solana-define-syscall = { workspace = true }
 
 [package.metadata.docs.rs]
