--- a/sdk/program-memory/Cargo.toml
+++ b/sdk/program-memory/Cargo.toml
@@ -10,7 +10,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-num-traits.workspace = true
+num-traits = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
